--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,69 @@
-/* You can add global styles to this file, and also import other style files */
+:root{
+  --c-white: #ffffff;
+  --c-smokewhite: #cbcbcb;
+  --c-brand: rgba(0, 0, 0, 0.7);
+  --c-dark: #000000;
+  --c-lightblack: #2c2c2c;
+  --c-brand-light: #949494;
+  --c-brand-rgb: 100,100,100;
+  --c-body: #727272;
+  --box-shadow: 0px 15px 25px rgba(0,0,0,0.08);
+  --transition: all 0.5s ease;
+
+  --c-backgroundcolorgrey: #eeeeee;
+  --c-backgroundcolorwhite: #ffffff;
+  --c-borderscolor: rgba(168, 168, 168, 0.54);
+  --c-paragraphcolorblack: #101010;
+  --c-paragraphcolorwhite: #e8e8e8;
+  --c-buttoncolor: #ffffff;
+  --c-buttoncolorhover: #868686;
+}
+
+body{
+  font-family: "Courier New";
+  line-height: 1.7;
+  color: var(--c-body);
+}
+
+h1,h1,h3,h4,h5,h6
+.h1, .h2, .h3, .h4, .h5, .h6{
+  font-weight: 600;
+  color: var(--c-dark);
+}
+
+a{
+  text-decoration: none;
+  color: var(--c-brand);
+  transition: var(--transition);
+}
+
+a:hover{
+  color: var(--c-brand-light);
+}
+
+img{
+  max-width: 100%;
+  height: auto;
+}
+
+.section-padding{
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+p{
+  color: white;
+  font-size: 20px;
+}
+
+.iconbox{
+  width: 70px;
+  height: 70px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(var(--c-brand-rgb), 0.1);
+  color: var(--c-brand);
+  font-size: 34px;
+  flex: none;
+}
